<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/toprated"
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        />
    <item android:title="@string/popular"
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        />
    <item android:title="@string/favorites"
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        />
    <item android:title="@string/refresh"
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        />


</menu>
