<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE">

    <TextView
        android:text="@string/error_message_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tverror"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/ivheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:minHeight="150dp" />

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivposter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:minHeight="150dp"
            android:minWidth="150dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />
    </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvreleasedate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/release_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvvoteaverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/vote_average"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvfavorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="2dp"
                        android:paddingRight="2dp"
                        android:text="Favorite: "
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/bt_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:src="@android:drawable/btn_star_big_off"
                        android:text="@string/favorite_label" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/plot_synopsis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:id="@+id/tvsynopsis_label"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold"

            />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <TextView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="18sp"
        android:id="@+id/tvsynopsis"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"


        />
    </ScrollView>
    </FrameLayout>
    <FrameLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_trailers_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/trailer_label"
        android:visibility="visible"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/tv_notrailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/no_trailer"
        android:textStyle="bold"
        android:visibility="visible" />


    </LinearLayout>

    </FrameLayout>

    <FrameLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lista"
            android:layout_width="wrap_content"
            android:layout_height="91dp" />

    </LinearLayout>
    </FrameLayout>

    <FrameLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >



    <LinearLayout
        android:id="@+id/trailer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:text="@string/reviews_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_reviews_label"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="visible"
            android:textStyle="bold"
            />
        <TextView
            android:text="@string/no_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_noreviews"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold"
            android:visibility="visible"
            />

    </LinearLayout>

</FrameLayout>

</LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>